--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
+Noah Abayomi Ogunniran <noah.poeni@gmail.com>
 Olalekan Shogbaike <olalekanshogbaike@gmail.com>
